src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_10_errors.snap
---
source: src/parser/test.rs
description: 5 > 4 == 3 < 4
expression: "parser_errors(\"5 > 4 == 3 < 4\", errors)"
---
5 > 4 == 3 < 4
