src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_12_errors.snap
---
source: src/parser/test.rs
description: 3 + 4 * 5 == 3 * 1 + 4 * 5
expression: "parser_errors(\"3 + 4 * 5 == 3 * 1 + 4 * 5\", errors)"
---
3 + 4 * 5 == 3 * 1 + 4 * 5
