src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_13.snap
---
source: src/parser/test.rs
description: "true"
expression: result
---
[
    Bool {
        token: Token(True, "true", (0,0)->(0,4)),
        value: true,
    },
]

===================================

true
