src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_13_errors.snap
---
source: src/parser/test.rs
description: "true"
expression: "parser_errors(\"true\", errors)"
---
true
