src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_14.snap
---
source: src/parser.rs
description: "false"
expression: stmts
---
[
    Bool {
        token: Token(False, "false", (0,0)->(0,5)),
        value: false,
    },
]
