src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_14_errors.snap
---
source: src/parser/test.rs
description: "false"
expression: "parser_errors(\"false\", errors)"
---
false
