src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_15_errors.snap
---
source: src/parser/test.rs
description: 3 > 5 == false
expression: "parser_errors(\"3 > 5 == false\", errors)"
---
3 > 5 == false
