src/parser/snapshots/monkey_language_server__parser__test__operator_precedence_16.snap
---
source: src/parser/test.rs
description: 3 < 5 == true
expression: result
---
[
    Infix {
        token: Token(Equal, "==", (0,6)->(0,8)),
        left: Infix {
            token: Token(LT, "<", (0,2)->(0,3)),
            left: Int {
                token: Token(Int, "3", (0,0)->(0,1)),
                value: 3,
            },
            right: Int {
                token: Token(Int, "5", (0,4)->(0,5)),
                value: 5,
            },
            operator: Lt,
        },
        right: Bool {
            token: Token(True, "true", (0,9)->(0,13)),
            value: true,
        },
        operator: Eq,
    },
]

===================================

3 < 5 == true
